# llm-monitoring-framework

./: .coveragerc  .dockerignore  .gitignore  ANALYSIS_AND_TRANSFORMATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  PYTHON_CLIENT_FIX_SUMMARY.md  README.md  TEST_FIXES_SUMMARY.md  VALIDATION_SUMMARY.md  after_inference_metrics.json  baseline_metrics.json  config.yaml  docker-compose.yml  install.sh  main.py  ollama_integration_example.py  pyproject.toml  real_ollama_test.py  requirements.txt  setup.py  test_focused_metrics.py
.github/workflows/: cd.yml  ci.yml  dependencies.yml
api/: __init__.py  server.py
ci_tests/: test_api_server.py  test_api_server_minimal.py  test_api_server_robust.py  test_cost_components.py  test_dependencies_step_by_step.py  test_quality_components.py  test_ultra_minimal.py  validate_models.py
dashboard/: __init__.py  app.py
docs/: CI_CD_SETUP.md  DASHBOARD_FIXES_SUMMARY.md  FEATURES.md  HOW_TO_TEST_YOUR_LLM.md  LLM_DATA_STORAGE_ANALYSIS.md  README.md  SETUP_GUIDE.md  TEST_RESULTS_SUMMARY.md  TEST_SUMMARY.md  VALIDATION_SUMMARY.md
examples/: README.md  debug_tracking.py  factual_accuracy_demo.py  integration_examples.py  single_ollama_call.py
examples/integrations/: quick_test.py  simple_llm_test.py  test_dashboard_fix.py  test_different_models.py  test_my_llm.py  test_ollama_llm.py
monitoring/: __init__.py  alerts.py  client.py  config.py  cost.py  database.py  metrics.py  metrics_focused.py  models.py  models_focused.py  quality.py
scripts/: README.md  download_model.py
tests/: __init__.py  run_tests.py  test_api.py  test_comprehensive_quality.py  test_cost_tracking.py  test_enhanced_system_metrics.py  test_focused_metrics.py  test_integration_ollama.py  test_llm_metrics.py  test_monitoring.py  test_quality_benchmarks.py  test_quality_monitoring.py  test_safety_comprehensive.py
