[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-monitoring-framework"
description = "Production-ready monitoring framework for Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LLM Monitoring Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "1.0.0"

[project.urls]
Homepage = "https://github.com/heyyymonth/llm-monitoring-framework"
Repository = "https://github.com/heyyymonth/llm-monitoring-framework"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["monitoring", "api", "dashboard"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
show_missing = true 